Links externos header

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             <div class="container"> 
                 <h2 class="logo">GALOFLIX</h2>     <!--NOME -->
                 <nav> <!--TAG SEMANTICA-->
-                    <a href="#">Início</a>       <!--LINKS DE ACESSO--> <!--atalho para copiar linhas Alt + shift + seta p baixo-->
-                    <a href="#">Gols</a>         <!--LINKS DE ACESSO-->
-                    <a href="#">Títulos</a>      <!--LINKS DE ACESSO-->
-                    <a href="#">Filmes</a>       <!--LINKS DE ACESSO-->
+                    <a href="https://atletico.com.br/" target="_blank" rel="external">CAM</a> <!--LINKS DE ACESSO-->
+                    <a href="https://www.youtube.com/user/tvgaloweb"target="_blank" rel="external">Galotv</a>      <!--LINKS DE ACESSO--> <!--atalho para copiar linhas Alt + shift + seta p baixo-->
+                    <a href="https://www.youtube.com/watch?v=PZYw6ucAsUo"target="_blank" rel="external">Gols</a>         <!--LINKS DE ACESSO-->
+                    <a href="https://atletico.com.br/futebol/masculino/titulos/"target="_blank" rel="external">Títulos</a>      <!--LINKS DE ACESSO-->
+                           
                 </nav>
             </div>
         </header>
@@ -40,7 +41,7 @@
                 <button role="button" class="botao">
                     <i class="fa-solid fa-futbol"></i>
                     GOL DO GALO!
-                   </button>
+                   </button> 
                    <button role="button" class="botao">
                     <i class="fa-solid fa-reply"></i>
                     REPLAY
